// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAstForSql > parses SQL select statement > MySQL 1`] = `
{
  "columns": [
    {
      "as": null,
      "expr": {
        "column": "*",
        "table": null,
        "type": "column_ref",
      },
    },
  ],
  "distinct": null,
  "from": [
    {
      "as": null,
      "db": null,
      "table": "users",
    },
    {
      "as": null,
      "db": null,
      "join": "INNER JOIN",
      "on": {
        "left": {
          "column": "id",
          "table": "users",
          "type": "column_ref",
        },
        "operator": "=",
        "right": {
          "column": "user_id",
          "table": "posts",
          "type": "column_ref",
        },
        "type": "binary_expr",
      },
      "table": "posts",
    },
  ],
  "groupby": null,
  "having": null,
  "into": {
    "position": null,
  },
  "limit": {
    "seperator": "",
    "value": [
      {
        "type": "number",
        "value": 1,
      },
    ],
  },
  "locking_read": null,
  "options": null,
  "orderby": [
    {
      "expr": {
        "column": "id",
        "table": "users",
        "type": "column_ref",
      },
      "type": "ASC",
    },
  ],
  "type": "select",
  "where": {
    "left": {
      "column": "id",
      "table": "users",
      "type": "column_ref",
    },
    "operator": "=",
    "right": {
      "type": "number",
      "value": 1,
    },
    "type": "binary_expr",
  },
  "window": null,
  "with": null,
}
`;

exports[`getAstForSql > parses SQL select statement > PostgreSQL 1`] = `
{
  "columns": [
    {
      "as": null,
      "expr": {
        "column": "*",
        "table": null,
        "type": "column_ref",
      },
    },
  ],
  "distinct": {
    "type": null,
  },
  "from": [
    {
      "as": null,
      "db": null,
      "table": "users",
    },
    {
      "as": null,
      "db": null,
      "join": "INNER JOIN",
      "on": {
        "left": {
          "column": "id",
          "table": "users",
          "type": "column_ref",
        },
        "operator": "=",
        "right": {
          "column": "user_id",
          "table": "posts",
          "type": "column_ref",
        },
        "type": "binary_expr",
      },
      "table": "posts",
    },
  ],
  "groupby": null,
  "having": null,
  "into": {
    "position": null,
  },
  "limit": {
    "seperator": "",
    "value": [
      {
        "type": "number",
        "value": 1,
      },
    ],
  },
  "options": null,
  "orderby": [
    {
      "expr": {
        "column": "id",
        "table": "users",
        "type": "column_ref",
      },
      "nulls": null,
      "type": "ASC",
    },
  ],
  "type": "select",
  "where": {
    "left": {
      "column": "id",
      "table": "users",
      "type": "column_ref",
    },
    "operator": "=",
    "right": {
      "type": "number",
      "value": 1,
    },
    "type": "binary_expr",
  },
  "window": null,
  "with": null,
}
`;
